# progest

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md  mise.toml  pnpm-lock.yaml
app/: .oxlintrc.json  components.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  index.css
app/src/components/: command-palette.tsx  directory-inspector.tsx  drag-drop-overlay.tsx  file-context-menu.tsx  file-inspector.tsx  flat-view.tsx  hits-data-table.tsx  import-modal.tsx  init-project-dialog.tsx  result-detail-dialog.tsx  title-bar.tsx  tree-view.tsx  violation-badges.tsx
app/src/lib/: dotmatrix-hooks.ts  ipc.ts  project-context.tsx  use-thumbnails.ts
crates/progest-cli/: Cargo.toml
crates/progest-cli/src/: context.rs  main.rs
crates/progest-cli/tests/: cli_flow.rs  import_smoke.rs  lint_smoke.rs  undo_redo_smoke.rs
crates/progest-core/: Cargo.toml
crates/progest-core/src/: delete.rs  lib.rs
crates/progest-core/tests/: import_flow.rs  meta_roundtrip.rs
crates/progest-merge/: Cargo.toml
crates/progest-merge/src/: main.rs
crates/progest-tauri/: Cargo.toml  tauri.conf.json
crates/progest-tauri/capabilities/: default.json
crates/progest-tauri/icons/: icon.icns
crates/progest-tauri/src/: accepts_commands.rs  commands.rs  delete_commands.rs  file_inspector_commands.rs  import_commands.rs  lib.rs  (+6 more)
docs/: ACCEPTS_ALIASES.md  ARCHITECTURE.md  COMMAND_PALETTE.md  IMPLEMENTATION_PLAN.md  LESSONS.md  M2_HANDOFF.md  M3_HANDOFF.md  M4_HANDOFF.md  NAMING_RULES_DSL.md  REFACTOR_BACKLOG.md  REQUIREMENTS.md  SEARCH_DSL.md  _DRAFT.md
(+63 files in other folders)
