[package]
name = "progest-merge"
description = "Git merge driver for Progest .meta TOML sidecars."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "progest-merge"
path = "src/main.rs"

[dependencies]
progest-core = { path = "../progest-core" }
anyhow.workspace = true
clap.workspace = true

[lints]
workspace = true
